# serverish

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  test-ci.yml
.planning/: PROJECT.md
doc/: concepts.md  monitoring.md  nats-client-considerations.md  observability-report.md  status-unification-analysis.md
docker/: docker-compose.yaml
docker/nats/: NOTES.md  NOTES.txt  docker-compose.yaml  nats.conf  nats.service
examples/: messenger.py  nats_diagnose.py  nats_wind.py  rich_progress.py  send_msg_subscr.py  simple_service.py  telemetry.py
examples/rich_progress.run/: rich_progress.run.xml
serverish/: __init__.py  collector.py  connection.py  connection_jets.py  connection_nats.py  hasstatuses.py  idmanger.py  manageable.py  messenger.py  msgvalidator.py  resource.py  singlethon.py  singleton.py  slog.py  status.py
serverish/base/: __init__.py  collector.py  datetime.py  exceptions.py  fifoset.py  hasstatuses.py  idmanger.py  iter_to_callback.py  iterators.py  manageable.py  singleton.py  status.py  task_manager.py
serverish/config/: defaultconfigloader.py
serverish/connection/: __init__.py  connection.py  connection_jets.py  connection_nats.py
serverish/messenger/: __init__.py  live_document.py  logging.py  messenger.py  msg_callback_sub.py  msg_cmd_pub.py  msg_cmd_sub.py  msg_core_pub.py  msg_core_read.py  msg_core_sub.py  msg_document_read.py  msg_journal_pub.py  msg_journal_read.py  msg_progress_pub.py  msg_progress_read.py  msg_publisher.py  msg_reader.py  msg_rpc_req.py  msg_rpc_resp.py  msg_single_pub.py  msg_single_read.py  msgvalidator.py
serverish/monitoring/: __init__.py  bridge.py  factory.py  health.py  heartbeat.py  monitored.py  monitored_nats.py  status.py
serverish/schema/: config.schema.json  default.schema.json  journal.schema.json  meta.schema.json  program_current_state.schema.json  program_state.schema.json  progress.schema.json  telemetry.schema.json
serverish/services/: TODO.txt  baseservice.py  cli.py  process.py  (+6 more)
tests/: conftest.py  test_close_loop.py  test_comp_branch_failures.py  test_comp_cpu_blocking.py  test_comp_recovery_timing.py  test_comp_slow_consumer.py  test_connection.py  test_consumers_lifetime.py  test_corr_consumer.py  test_corr_core_pubsub.py  test_corr_error_behavior.py  test_corr_health.py  test_corr_patterns.py  test_corr_publisher.py  test_datetime.py  test_delivery_policies.py  test_dns.py  test_fifoset.py  test_idmanager.py  test_infra_smoke.py  test_iterators.py  test_live_document.py  test_messenger.py  test_messenger_core_pubsub.py  test_messenger_disconnect.py  test_messenger_document.py  test_messenger_gets.py  test_messenger_issue10.py  test_messenger_issue5.py  test_messenger_issue6.py  test_messenger_journal.py  test_messenger_journal_logging.py  test_messenger_nowait.py  test_messenger_progress.py  test_messenger_reliability.py  test_messenger_reqresp.py  test_messenger_single.py  test_messenger_sub.py  test_monitoring.py  test_nats.py  (+9 more)
(+10 files in other folders)
