[tool.poetry]
name = "serverish"
version = "2.1.0"
description = "helpers for server alike projects"
authors = ["Mikołaj Kałuszyński", "MMME team"]
readme = "README.md"
repository = "https://github.com/AkondLab/serverish"
include = ["serverish/schema/*"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.20.0"
nats-py = { version = "^2.7.2", optional = true }
aiodns = { version = "^3.2.0", optional = true }
pydantic = { version = "^2.10.6", optional = true }
dynaconf = { version = "^3.2.10", optional = true }
fire = { version = "^0.7.0", optional = true }
fastapi = { version = "^0.115.8", optional = true }
typer-slim = "^0.15.1"

[tool.poetry.extras]
messenger = ["nats-py"]
dns = ["aiodns"]
server = ["fastapi", "fire", "nats-py", "typer", "dynaconf"]
services = ["dynaconf", "nats-py"]
all = [
    "aiodns",
    "nats-py",
    "pydantic",
    "dynaconf",
    "fire",
    "fastapi",
    "typer",
]

[tool.poetry.scripts]
sish = "serverish.services.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
nats-py = "^2.7.2"
aiodns = "^3.1.1"
pydantic = "^2.10.6"
dynaconf = "^3.2.10"
fire = "^0.7.0"
fastapi = "^0.115.8"
typer-slim = "^0.15.1"



[build-system]
requires = ["poetry-core"]
backend = "poetry.core.masonry.api"