[tool.poetry]
name = "serverish"
version = "2.0.4"
description = "helpers for server alike projects"
authors = ["Mikołaj Kałuszyński", "MMME team"]
readme = "README.md"
repository = "https://github.com/AkondLab/serverish"
include = ["serverish/schema/*"]

[tool.poetry.dependencies]
python = "^3.10"
aiodns = {version="^3.2.0", optional=true}
param = "^2.1.0"
nats-py = { version = "^2.7.2", optional= true}
jsonschema = "^4.20.0"

[tool.poetry.extras]
messenger = ["nats-py"]
dns = ["aiodns"]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-asyncio = ">=0.24,<1"
nats-py = "^2.6.0"
jupyter = "*"
rich = "^13.5.2"
aiodns = "^3.1.1"
testcontainers = {extras = ["nats"], version = "^4.14.2"}
pytest-timeout = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
